@@ -1,6 +1,8 @@
 Copyright (C) 2017 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_081217_1 - Only follow users we're not already following. Add rudimentary bandwidth check.
+
 saw_081117_2 - Use code that is compatible with older versions of matplotlib (e.g. 1.4.3).
 
 saw_081117_1 - Market mode now has graphing!
